# TFG-Informatica

./: Makefile  Makefile.in  bool_enum.h  configure  configure.ac  function.cpp  function.h  function_generator.cpp  function_generator.h  lx-install.sh  main.cpp  meta_function_generator.cpp  node.cpp  node.h  node_info.cpp
src/: Makefile  Makefile.am  Makefile.in  define.h  main.cpp
src/dispatch/: Makefile  Makefile.am  Makefile.in  function_dispatcher.cpp  function_dispatcher.h  stored_info.cpp  stored_info.h  task_dispatcher.cpp  task_dispatcher.h
src/endogamy/: csv_to_matrix.py  generate_csv.py  generate_endogamy_csv.py  generate_id_vectorgate_csv.py  graphics.py  graphics_new_correlations.py  histogram.py  lambda_threshold.py
src/function/: Makefile  Makefile.am  Makefile.in  bool_enum.h  circuit.cpp  circuit.h  define.h  function.cpp  function.h  function_generator.cpp  function_generator.h  meta_function_generator.cpp  meta_function_generator.h  node.cpp  node.h  node_info.cpp  node_info.h
src/infint/: InfInt.h
src/nvwa/.deps/: debug_new.Po
src/random_circuits/: random_circuits.cpp
src/statistics/: Makefile  Makefile.am  Makefile.in  statistics.cpp  statistics.h
