noinst_LIBRARIES = libdispatch.a

libdispatch_a_CPPFLAGS= -I$(top_srcdir)/src -I$(top_srcdir)/src/function \
-I$(top_srcdir)/src/statistics -I$(top_srcdir)/src/CTPL

libdispatch_a_SOURCES = function_dispatcher.cpp function_dispatcher.h \
task_dispatcher.cpp task_dispatcher.h stored_info.cpp stored_info.h

# $(RANLIB)
