AM_CXXFLAGS = -std=c++17 -pthread

noinst_LIBRARIES = libfunction.a

libfunction_a_CPPFLAGS= -I$(top_srcdir)/src

libfunction_a_SOURCES = circuit.cpp function_generator.cpp \
meta_function_generator.cpp node.cpp node_info.cpp function.cpp \
circuit.h function_generator.h \
meta_function_generator.h node.h node_info.hfunction.h bool_enum.h 